@startuml

title __VIEW's Class Diagram__\n

  namespace com.kamshanski.blepositioning {
    namespace view {
      class com.kamshanski.blepositioning.view.Application {
          ~ positionGraphPanel : XChartPanel<XYChart>
          ~ positionHistoryGraphPanel : XChartPanel<XYChart>
          ~ rssiGraphPanel : XChartPanel<XYChart>
          - btnConnect : JButton
          - btnExperiment : JButton
          - btnRecordExperiment : JButton
          - btnRemoveRecords : JButton
          - btnShowResults : JButton
          - btnStartStopExperiment : JButton
          - btnTracking : JButton
          - cardHolder : JPanel
          - cardLayout : CardLayout
          - cmbComPortNum : JComboBox
          - expCard : JPanel
          - expCardPanel : JPanel
          - lblExperimentOnOff : JLabel
          - lblSlavesNum : JLabel
          - lblTargetsNum : JLabel
          - mapPlotPanel : JPanel
          - panel1 : JPanel
          - posHistoryPanel : JPanel
          - radioPlotPanel : JPanel
          - scrollComPortLog : JScrollPane
          - sp1 : JSplitPane
          - sp2 : JSplitPane
          - trackingCardPanel : JPanel
          - txComPortLog : JTextArea
          - txExperimentLog : JTextArea
          - txExperimentName : JTextArea
          - txPositionLog : JTextArea
          - txProgramLog : JTextArea
          - txTargetsSet : JTextArea
          + $$$getRootComponent$$$()
          + Application()
          + getExpName()
          + initApplication()
          + printToExperimentsResultsLabel()
          + printToProgramLog()
          + println()
          + setConnectionStatus()
          + setExperimentStatus()
          + setSlaveNum()
          + setTargetsNum()
          - $$$setupUI$$$()
          - createUIComponents()
          - setListeners()
      }
    }
  }
  

  namespace com.kamshanski.blepositioning {
    namespace view {
      class com.kamshanski.blepositioning.view.PaintPanel {
          {static} + BEACON : int
          {static} + FIELD_H : int
          {static} + FIELD_W : int
          {static} + MAIN_FIELD : int
          {static} + TARGET : int
          ~ hr : double
          ~ staticPaintings : PaintObject[]
          ~ wr : double
          - H : double
          - W : double
          + PaintPanel()
          + mydraw()
          + paint()
          + reshape()
          + setTarget()
          + updatePaintingsSize()
          + updateTargetState()
          - initGraphicsList()
      }
    }
  }
  

  namespace com.kamshanski.blepositioning {
    namespace view {
      abstract class com.kamshanski.blepositioning.view.TextChangedListener {
          + changedUpdate()
          + insertUpdate()
          {abstract} + onTextChanged()
          + removeUpdate()
      }
    }
  }
  

  com.kamshanski.blepositioning.view.Application -up-|> javax.swing.JFrame
  com.kamshanski.blepositioning.view.Application o-- com.kamshanski.blepositioning.appcontrol.PositionAreaPlotViewModel : positionAreaPlotViewModel
  com.kamshanski.blepositioning.view.Application o-- com.kamshanski.blepositioning.appcontrol.PositionTrendPlotViewModel : positionTrendPlotViewModel
  com.kamshanski.blepositioning.view.Application o-- com.kamshanski.blepositioning.appcontrol.RssiPlotViewModel : rssiPlotViewModel
  com.kamshanski.blepositioning.view.Application o-- com.kamshanski.blepositioning.appcontrol.ViewModel : viewModel
  com.kamshanski.blepositioning.view.PaintPanel -up-|> javax.swing.JPanel
  com.kamshanski.blepositioning.view.PaintPanel o-- com.kamshanski.blepositioning.view.paintpatterns.PaintCircle : target
  com.kamshanski.blepositioning.view.TextChangedListener .up.|> javax.swing.event.DocumentListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
